Made edits to the comments

--- a/project.ipynb
+++ b/project.ipynb
@@ -335,7 +335,7 @@
     }
    ],
    "source": [
-    "# Var set is the base question for all subquestions\n",
+    "# Var set contains the base questions for all subquestions\n",
     "var_set = set()\n",
     "\n",
     "# Gets the base question (e.g. hepspre is a base question of hepspre1) string by removing digits of unique column names and append them to set\n",
