--- a/project.ipynb
+++ b/project.ipynb
@@ -385,7 +385,7 @@
     }
    ],
    "source": [
-    "# Calulates the averages for each base question sum\n",
+    "# Calculates the averages for each base question sum\n",
     "cols_to_avg = [col for col in df.columns if \"sum\" in col]\n",
     "for col in cols_to_avg:\n",
     "    avg = sum(df[col]) / len(df[col])\n",
